[workspace.package]
authors = ["Bolarity"]
edition = "2021"
repository = "https://github.com/BolarityNetwork/BolarityNode"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/*"
]

[workspace.dependencies]
# third-party dependencies
array-bytes = "6.1"
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1" }
primitive-types = { version = "0.12.0", default-features = false }
scale-info = { version = "2.11.1", features = ["derive", "serde"] }
serde = { version = "1.0.197", features = ["derive"], default-features = true }
serde_json = { version = "1.0.114", default-features = false }
static_assertions = "1.1.0"
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.30"
log = { version = "0.4.21", default-features = false }
rand = "0.8"

# substrate primitives
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
grandpa-primitives = { package = "sp-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-crypto-hashing ={ git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-mixnet = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-mmr-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-statement-store = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }

# substrate client dependencies
mmr-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-statement-store = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-network-statement = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
beefy = { package = "sc-consensus-beefy", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
mmr-gadget = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-service-test = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-mixnet = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-storage-monitor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }

# substrate frame dependencies
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-benchmarking-pallet-pov = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-alliance = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-asset-conversion-ops = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-asset-rate = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-broker = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-core-fellowship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-example-mbm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-example-tasks = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-fast-unstake = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-glutton = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-lottery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-mixnet = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nft-fractionalization = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nfts = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nis = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-parameters = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-ranked-collective = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-recovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-remark = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-root-testing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-safe-mode = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-salary = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-skip-feeless-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-society = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-state-trie-migration = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-statement = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-transaction-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-tx-pause = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }

# substrate node dependencies
node-testing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
node-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
substrate-cli-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
substrate-rpc-client = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }

# substrate utilities
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.11.0" }



